--- a/backend/backend.csproj
+++ b/backend/backend.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0" />
+    <PackageReference Include="MongoDB.Driver" Version="3.1.0" />
+    <PackageReference Include="Scalar.AspNetCore" Version="1.2.72" />
   </ItemGroup>
 
 </Project>
